--- a/portfolio/B19/builds.html
+++ b/portfolio/B19/builds.html
@@ -10,11 +10,6 @@
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<style>
-	body {
-		background-color: #F2F2F2;
-	}
-</style>
 
 <body>
 	<div class="wrapper">
@@ -144,129 +139,90 @@
 				</div>
 			</div>
 		</header>
-		<div class="top-main">
-			<div class="top-main__container">
-				<div class="top-main__body">
-					<div class="top-main__col col-top-main">
-						<div class="col-top-main__body">
-							<div class="col-top-main__title title">
-								<h1><span class="yellow-title"> Б19</span> - ВИРОБНИК І ЗАБУДІВНИК
-								</h1>
-							</div>
-							<div class="col-top-main__text">
-								<p>
-									Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is
-									pain, but because occasionally circumstances
-								</p>
-							</div>
-							<div class="col-top-main__button">
-								<a href="#" class="col-top-main__btn button">Детальніше</a>
-							</div>
-						</div>
+		<div class="topb">
+			<div class="topb__container">
+				<div class="topb__body">
+					<div class="topb__title title">
+						<h1><span class="yellow-title">Багатоповерхові</span> <span class="yellow-title">панельні <span class="yellow-title">будинки</span></span></h1>
 					</div>
-					<div class="top-main__col col-top-main-image">
-						<div class="col-top-main-image__body">
-							<div class="col-top-main-image__image">
-								<img src="img/top/houses-main.png" alt="">
-							</div>
-						</div>
+					<div class="topb__text">
+						<p>Настав новий час, час Нової України, час технологій.
+							Будівельна група Б19 пропонує інноваційний продукт для
+							швидкої багатоповерхової забудови
+						</p>
+					</div>
+					<div class="topb__label">
+						<h3>ПЕРЕВАГИ</h3>
+					</div>
+					<ul class="topb__list">
+						<li class="topb__item">Швидкість 5-7000м2 житла на місяць</li>
+						<li class="topb__item">Якість – тришарові бетонні модулі</li>
+						<li class="topb__item">Дизайн – десятки варіантів фактур та будь-які забарвлення фасадів</li>
+						<li class="topb__item">Екологічність – застосування фотокалітичного бетону переробляє СО2</li>
+						<li class="topb__item">Чистота – фасади, що самоочищаються (Гідроксид Титану)</li>
+						<li class="topb__item">Власне виробництво меблів – <span>готові ергономічні рішення</span></li>
+						<li class="topb__item">Теплоефективність - будинки придатні для експлуатації до температур -
+							65-70 градусів без додаткового утеплення</li>
+					</ul>
+					<div class="topb__image">
+						<img src="img/topb/image.png" alt="">
 					</div>
 				</div>
 			</div>
 		</div>
 		<main class="page">
-			<div class="benefits">
-				<div class="benefits__container">
-					<div class="benefits__body">
-						<div class="benefits__row row-benefits">
-							<div class="row-benefits__item item-benefits">
-								<div class="item-benefits__body item01">
-									<div class="item-benefits__image"><img src="img/benefits/item01.png" alt="img"></div>
-									<div class="item-benefits__label">
-										<h3>Сучасність</h3>
-									</div>
-								</div>
-							</div>
-							<div class="row-benefits__item item-benefits">
-								<div class="item-benefits__body">
-									<div class="item-benefits__image item02"><img src="img/benefits/item02.png" alt="img"></div>
-									<div class="item-benefits__label">
-										<h3>Швидкість</h3>
-									</div>
-								</div>
-							</div>
-							<div class="row-benefits__item item-benefits">
-								<div class="item-benefits__body item03">
-									<div class="item-benefits__image item03"><img src="img/benefits/item03.png" alt="img"></div>
-									<div class="item-benefits__label">
-										<h3>Відповідальність</h3>
-									</div>
-								</div>
-							</div>
-							<div class="row-benefits__item item-benefits">
-								<div class="item-benefits__body">
-									<div class="item-benefits__image item04"><img src="img/benefits/item04.png" alt="img"></div>
-									<div class="item-benefits__label">
-										<h3>Репутація</h3>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="slider-top-main">
-				<div class="slider-top-main__container">
-					<div class="slider-top-main__body">
-						<div class="slider-top-main__slider swiper">
-							<div class="slider-top-main__wrapper swiper-wrapper">
-								<div class="slider-top-main__slide swiper-slide">
-									<div class="slide-slider-top-main__body">
-										<div class="slide-slider-top-main__gradient"></div>
-										<div class="slide-slider-top-main__image"><img src="img/slider-top-main/back-slide1.jpg" alt="background-slide">
+			<div class="sliderb">
+				<div class="sliderb__container">
+					<div class="sliderb__body">
+						<div class="sliderb__slider swiper">
+							<div class="sliderb__wrapper swiper-wrapper">
+								<div class="sliderb__slide swiper-slide">
+									<div class="slide-sliderb__body">
+										<div class="slide-sliderb__gradient"></div>
+										<div class="slide-sliderb__image"><img src="img/sliderb/slide.jpg" alt="background-slide">
 										</div>
-										<div class="slide-slider-top-main__text">
-											<p>НАША МІСІЯ - ПОБУДУВАТИ НОВУ УКРАЇНУ!</p>
+										<div class="slide-sliderb__text">
+											<p>Б19 – ВИРОБНИК ТА ЗАБУДОВНИК В ОДНІЙ ОСОБІ!</p>
 										</div>
 									</div>
 								</div>
-								<div class="slider-top-main__slide swiper-slide">
-									<div class="slide-slider-top-main__body">
-										<div class="slide-slider-top-main__gradient"></div>
-										<div class="slide-slider-top-main__image"><img src="img/slider-top-main/back-slide1.jpg" alt="background-slide">
+								<div class="sliderb__slide swiper-slide">
+									<div class="slide-sliderb__body">
+										<div class="slide-sliderb__gradient"></div>
+										<div class="slide-sliderb__image"><img src="img/sliderb/slide.jpg" alt="background-slide">
 										</div>
-										<div class="slide-slider-top-main__text">
-											<p>НАША МІСІЯ - ПОБУДУВАТИ НОВУ УКРАЇНУ!</p>
-										</div>
-									</div>
-								</div>
-								<div class="slider-top-main__slide swiper-slide">
-									<div class="slide-slider-top-main__body">
-										<div class="slide-slider-top-main__gradient"></div>
-										<div class="slide-slider-top-main__image"><img src="img/slider-top-main/back-slide1.jpg" alt="background-slide">
-										</div>
-										<div class="slide-slider-top-main__text">
-											<p>НАША МІСІЯ - ПОБУДУВАТИ НОВУ УКРАЇНУ!</p>
+										<div class="slide-sliderb__text">
+											<p>Б19 – ВИРОБНИК ТА ЗАБУДОВНИК В ОДНІЙ ОСОБІ!</p>
 										</div>
 									</div>
 								</div>
-								<div class="slider-top-main__slide swiper-slide">
-									<div class="slide-slider-top-main__body">
-										<div class="slide-slider-top-main__gradient"></div>
-										<div class="slide-slider-top-main__image"><img src="img/slider-top-main/back-slide1.jpg" alt="background-slide">
+								<div class="sliderb__slide swiper-slide">
+									<div class="slide-sliderb__body">
+										<div class="slide-sliderb__gradient"></div>
+										<div class="slide-sliderb__image"><img src="img/sliderb/slide.jpg" alt="background-slide">
 										</div>
-										<div class="slide-slider-top-main__text">
-											<p>НАША МІСІЯ - ПОБУДУВАТИ НОВУ УКРАЇНУ!</p>
+										<div class="slide-sliderb__text">
+											<p>Б19 – ВИРОБНИК ТА ЗАБУДОВНИК В ОДНІЙ ОСОБІ!</p>
 										</div>
 									</div>
 								</div>
-								<div class="slider-top-main__slide swiper-slide">
-									<div class="slide-slider-top-main__body">
-										<div class="slide-slider-top-main__gradient"></div>
-										<div class="slide-slider-top-main__image"><img src="img/slider-top-main/back-slide1.jpg" alt="background-slide">
+								<div class="sliderb__slide swiper-slide">
+									<div class="slide-sliderb__body">
+										<div class="slide-sliderb__gradient"></div>
+										<div class="slide-sliderb__image"><img src="img/sliderb/slide.jpg" alt="background-slide">
 										</div>
-										<div class="slide-slider-top-main__text">
-											<p>НАША МІСІЯ - ПОБУДУВАТИ НОВУ УКРАЇНУ!</p>
+										<div class="slide-sliderb__text">
+											<p>Б19 – ВИРОБНИК ТА ЗАБУДОВНИК В ОДНІЙ ОСОБІ!</p>
+										</div>
+									</div>
+								</div>
+								<div class="sliderb__slide swiper-slide">
+									<div class="slide-sliderb__body">
+										<div class="slide-sliderb__gradient"></div>
+										<div class="slide-sliderb__image"><img src="img/sliderb/slide.jpg" alt="background-slide">
+										</div>
+										<div class="slide-sliderb__text">
+											<p>Б19 – ВИРОБНИК ТА ЗАБУДОВНИК В ОДНІЙ ОСОБІ!</p>
 										</div>
 									</div>
 								</div>
@@ -280,84 +236,52 @@
 					</div>
 				</div>
 			</div>
-			<div class="newlvl">
-				<div class="newlvl__container">
-					<div class="newlvl__body">
-						<div class="newlvl__frame"></div>
-						<div class="newlvl__text">
-							<p>Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain,
-								but because occasionally circumstances Nor again is there anyone who loves or pursues or desires to
-								obtain pain of itself, because it is pain, but because occasionally circumstances </p>
-						</div>
-						<div class="newlvl__title"><span class="yellow-title">Б19 - НОВИЙ РІВЕНЬ </span><span class="yellow-title">МЕНЕДЖМЕНТУ</span></div>
-						<div class="newlvl__row row-newlvl">
-							<div class="row-newlvl__item item-newlvl">
-								<div class="item-newlvl__body">
-									<div class="item-newlvl__image"><img src="img/newlvl/item01.png" alt="item"></div>
-									<div class="item-newlvl__label">
-										<h3>Ми сучасні</h3>
-									</div>
-								</div>
-							</div>
-							<div class="row-newlvl__item item-newlvl">
-								<div class="item-newlvl__body">
-									<div class="item-newlvl__image"><img src="img/newlvl/item02.png" alt="item"></div>
-									<div class="item-newlvl__label">
-										<h3>Ми - доступні та швидкі</h3>
-									</div>
-								</div>
-							</div>
-							<div class="row-newlvl__item item-newlvl">
-								<div class="item-newlvl__body">
-									<div class="item-newlvl__image"><img src="img/newlvl/item03.png" alt="item"></div>
-									<div class="item-newlvl__label">
-										<h3>Ми відповідаємо</h3>
-									</div>
-								</div>
-							</div>
-							<div class="row-newlvl__item item-newlvl">
-								<div class="item-newlvl__body">
-									<div class="item-newlvl__image"><img src="img/newlvl/item04.svg" alt="item"></div>
-									<div class="item-newlvl__label">
-										<h3>Ми у Києві</h3>
-									</div>
-								</div>
-							</div>
+			<div class="newlvlbb">
+				<div class="newlvlb__container">
+					<div class="newlvlb__body">
+						<div class="newlvlb__frame"></div>
+						<div class="newlvlb__text">
+							<p>Ми розуміємо, що зараз потрібно
+								побудувати велику кількість житла за короткий термін і вважаємо, що технологія
+								модульної будови є найкращою для цього.</p>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="slider-main">
-				<div class="slider-main__container">
-					<div class="slider-main__body">
-						<div class="slider-main__title title">
-							<h2><span class="yellow-title">Наші проєкти</span></h2>
+			<div class="slidermb">
+				<div class="slidermb__container">
+					<div class="slidermb__body">
+						<div class="slidermb__title title">
+							<h2><span class="yellow-title"><span class="yellow-title">4-5 ПОВЕРХОВІ</span> БУДИНКИ</span> <br>
+								<span class="yellow-title"><span class="yellow-title"><span class="yellow-title"><span class="yellow-title">З</span> БОМБОСХОВИЩЕМ</span>
+										У</span> ПІДВАЛІ</span>
+							</h2>
 						</div>
-						<div class="slider-main__slider swiper">
-							<div class="slider-main__wrapper swiper-wrapper">
-								<div class="slider-main__slide swiper-slide">
-									<div class="slide-slider-main__body">
-										<img src="img/slider-main/slide1.jpg" alt="">
+						<div class="slidermb__slider swiper">
+							<div class="slidermb__wrapper swiper-wrapper">
+								<div class="slidermb__slide swiper-slide">
+									<div class="slide-slidermb__body">
+										<img src="img/slidermb/slide.jpg" alt="">
 									</div>
 								</div>
-								<div class="slider-main__slide swiper-slide">
-									<div class="slide-slider-main__body">
-										<img src="img/slider-main/slide1.jpg" alt="">
+								<div class="slidermb__slide swiper-slide">
+									<div class="slide-slidermb__body">
+										<img src="img/slidermb/slide.jpg" alt="">
 									</div>
 								</div>
-								<div class="slider-main__slide swiper-slide">
-									<div class="slide-slider-main__body">
-										<img src="img/slider-main/slide1.jpg" alt="">
+								<div class="slidermb__slide swiper-slide">
+									<div class="slide-slidermb__body">
+										<img src="img/slidermb/slide.jpg" alt="">
 									</div>
 								</div>
-								<div class="slider-main__slide swiper-slide">
-									<div class="slide-slider-main__body">
-										<img src="img/slider-main/slide1.jpg" alt="">
+								<div class="slidermb__slide swiper-slide">
+									<div class="slide-slidermb__body">
+										<img src="img/slidermb/slide.jpg" alt="">
 									</div>
 								</div>
-								<div class="slider-main__slide swiper-slide">
-									<div class="slide-slider-main__body">
-										<img src="img/slider-main/slide1.jpg" alt="">
+								<div class="slidermb__slide swiper-slide">
+									<div class="slide-slidermb__body">
+										<img src="img/slidermb/slide.jpg" alt="">
 									</div>
 								</div>
 
@@ -367,6 +291,103 @@
 							<!-- Если нужна навигация (влево/вправо) -->
 							<button type="button" class="swiper-button-prev"></button>
 							<button type="button" class="swiper-button-next"></button>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="smartb">
+				<div class="smartb__container">
+					<div class="smartb__body">
+						<div class="smartb__title title">
+							<h2><span class="yellow-title"><span class="yellow-title"><span class="yellow-title"><span class="yellow-title">2-3-4-8</span>
+											ПОВЕРХОВІ</span> <span class="yellow-title"><span class="yellow-title">БУДИНКИ-</span><span class="yellow-title">МОДУЛІ</span>
+											<span class="yellow-title">ЗІ</span> <span class="yellow-title">СМАРТ-</span></span><span class="yellow-title"><span class="yellow-title">КВАРТИРАМИ</span>
+											<span class="yellow-title">ТА</span> <span class="yellow-title">ОКРЕМИМ</span></span>
+										БОМБОСХОВИЩЕМ</span></span>
+							</h2>
+						</div>
+						<div class="smartb__label">
+							<h3>МАКСИМАЛЬНО ЕФЕКТИВНА ПЛОЩА ЗАБУДОВИ</h3>
+						</div>
+						<div class="smartb__row row-smartb">
+							<div class="row-smartb__item item-smartb">
+								<div class="item-smartb__body">
+									<ul class="item-smartb__list list">
+										<li class="item-smartb__item">Ергономічні смарт-квартири</li>
+										<li class="item-smartb__item">Будинки мають дах, що експлуатується.</li>
+										<li class="item-smartb__item">Площа плями забудови 362м2</li>
+										<li class="item-smartb__item">Кількість поверхів 2-3-4</li>
+										<li class="item-smartb__item">Кількість на поверсі 10 квартир 225м2</li>
+									</ul>
+								</div>
+							</div>
+							<div class="row-smartb__item item-smartb image">
+								<div class="item-smartb__body image">
+									<div class="item-smartb__image image">
+										<img src="img/smartb/image1.jpg" alt="">
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="smartb__title title title2">
+							<h2><span class="yellow-title">ВЛАШТУВАННЯ</span> <span class="yellow-title">БОМБОСХОВИЩА</span></h2>
+						</div>
+						<div class="smartb__row row-smartb row2">
+							<div class="row-smartb__item item-smartb images">
+								<div class="item-smartb__body images">
+									<div class="item-smartb__image images">
+										<img src="img/smartb/image2.jpg" alt="">
+									</div>
+								</div>
+							</div>
+							<div class="row-smartb__item item-smartb">
+								<div class="item-smartb__body">
+									<ul class="item-smartb__list list2">
+										<li class="item-smartb__item">Розмір приміщення 6300м2 (90х70м)</li>
+										<li class="item-smartb__item">Житловий відсік – 6 блоків по 160 двоярусних</li>
+										<li class="item-smartb__item">Ліжків (туалети та душі в кінці)</li>
+										<li class="item-smartb__item">Зона відпоч инку-їдальня</li>
+										<li class="item-smartb__item">Дитяча зона</li>
+										<li class="item-smartb__item">Складські приміщення</li>
+										<li class="item-smartb__item">Конструкція моноліт</li>
+										<li class="item-smartb__item">Дозволяє вмістити по 2 особи з кожної квартири</li>
+										<li class="item-smartb__item">Має 2 входи/виходи</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="infob">
+				<div class="infob__container">
+					<div class="infob__body">
+						<div class="infob__row row-infob">
+							<div class="row-infob__item item-infob">
+								<div class="item-infob__body">
+									<div class="item-infob__text">
+										<p>Ми пропонуємо до забудови проект з
+											6 чотириповерхових будинків загальної площею 8688м2.</p>
+									</div>
+									<div class="item-infob__text bold">
+										<p>У проекті передбачено дитячий майданчик, зона
+											відпочинку (парк) та парковка для авто.</p>
+									</div>
+									<div class="item-infob__text">
+										<p>Внизу під зоною відпочинку та паркуванням буде розташовуватися бомбосховище.
+											Площа участку 32 000м2 (200мх160м).
+											Кількість квартир 960шт (2к – 96шт, 1к – 864шт).
+											p>
+									</div>
+								</div>
+							</div>
+							<div class="row-infob__item item-infob">
+								<div class="item-infob__body">
+									<div class="item-infob__image">
+										<img src="img/infob/image.jpg" alt="">
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
