--- a/portfolio/B19/modules.html
+++ b/portfolio/B19/modules.html
@@ -139,96 +139,85 @@
 				</div>
 			</div>
 		</header>
-		<div class="top-about">
-			<div class="top-about__container">
-				<div class="top-about__body">
-					<div class="top-about__col col-top-about left">
-						<div class="col-top-about__body">
-							<div class="col-top-about__title title">
-								<h1><span class="yellow-title">Про нас</span></h1>
-							</div>
-							<div class="col-top-about__text">
-								<p>Нас об'єднала війна.
-									Вона прийшла без стуку, ми побоювалися її, але сподівалися до останнього, що це не станеться.
-									Раніше ми кожен мешкали своїм життям, іноді перетиналися за спільними проектами. Йшли паралельними
-									шляхами.
-								</p>
-								<p>І цей складний момент у долі нашої країни ми зрозуміли, що в об'єднанні наша сила. Зібравшись
-									разом, ми зможемо побудувати нову Україну. Краще, красивіше, технологічніше. Ми нове покоління
-									будівельників, з європейськими цінностями, духовністю та величезним бажанням змінити світ на краще.
-								</p>
-							</div>
-							<div class="col-top-about__label">
-								<h3>Ми будуємо наше майбутнє разом!
-								</h3>
-							</div>
-							<div class="col-top-about__button"><a href="#" class="col-top-about__btn button">Каталог продукції</a>
-							</div>
+		<div class="topm">
+			<div class="topm__background"><img src="img/topm/page-back.png" alt=""></div>
+			<div class="topm__container">
+				<div class="topm__body">
+					<div class="topm__title title">
+						<h1><span class="yellow-title">Модульні</span> <span class="yellow-title">проекти</span></h1>
+					</div>
+					<div class="topm__block">
+						<div class="topm__text">
+							<p>Наша компанія займається виробництвом та складанням модульних задній із тришарових залізобетонних
+								панелей.
+								Конструктивно тришарові стінові залізобетонні панелі є сендвіч-виробами, що складаються з двох шарів
+								бетону і шару теплоізоляції між ними. Як утеплювач використаний полістирол. Несучий (внутрішній) та
+								лицьовий (зовнішній) шари бетону пов'язані між собою сталевою арматурою, що дозволяє лицьовому шару
+								«висіти» на несучому. Товщина шарів може змінюватись для досягнення кращих показників теплостійкості.
+							</p>
+						</div>
+						<div class="topm__image">
+							<img src="img/topm/image.png" alt="image">
 						</div>
 					</div>
-					<div class="top-about__col col-top-about right">
-						<div class="col-top-about__body right">
-							<div class="col-top-about__image"><img src="img/top-about/back.png" alt="image"></div>
-						</div>
+					<div class="topm__label">
+						<ul class="topm__list">
+							<li class="topm__item">Товщина зовнішнього залізобетонного шару 50 мм</li>
+							<li class="topm__item">Товщина внутрішнього залізобетонного шару 100мм</li>
+							<li class="topm__item">Теплоізоляція плитний полістирол марки ПС6-С</li>
+						</ul>
 					</div>
 				</div>
 			</div>
 		</div>
 		<main class="page">
-			<div class="benefitsa">
-				<div class="benefitsa__container">
-					<div class="benefitsa__body">
-						<div class="benefitsa__row row-benefitsa">
-							<div class="row-benefitsa__item item-benefista">
-								<div class="item-benefista__body">
-									<div class="item-benefista__image">
-										<img src="img/benefitsa/back.jpg" alt="img">
+			<div class="typesm">
+				<div class="typesm__container">
+					<div class="typesm_body">
+						<div class="typesm__row row-typesm">
+							<div class="row-typesm__item item-typesm">
+								<div class="item-typesm__body">
+									<div class="item-typesm__image">
+										<a href="#"><img src="img/typesm/item01.jpg" alt=""></a>
+										<div class="item-typesm__textblock textblock-typesm">
+											<div class="textblock-typesm__body">
+												<div class="textblock-typesm__text">
+													<h3><a href="#">Збірні модульні будинки MODO</a></h3>
+												</div>
+											</div>
+										</div>
 									</div>
 								</div>
 							</div>
-							<div class="row-benefitsa__item item-benefista">
-								<div class="item-benefista__body right">
-									<ul class="item-benefista__list">
-										<li class="item-benefista__item">
-											<p>Ми виготовляємо бетон на власному РБУ (1000м3 на добу)
-											</p>
-										</li>
-										<li class="item-benefista__item">
-											<p>Ми виготовляємо панелі для модульних будинків (10 000м2 на місяць)
-											</p>
-										</li>
-										<li class="item-benefista__item">
-											<p>Ми виробляємо всі супутні інженерні системи (сходові марші, вентблоки та ін.)
-											</p>
-										</li>
-										<li class="item-benefista__item">
-											<p>Ми проектуємо
-											</p>
-										</li>
-										<li class="item-benefista__item">
-											<p>Ми виготовляємо меблі
-											</p>
-										</li>
-										<li class="item-benefista__item">
-											<p>Ми проводимо роботи зі збирання та оздоблення своїми робітниками
-											</p>
-										</li>
-										<li class="item-benefista__item">
-											<p>Ми робимо демонтажні роботи
-											</p>
-										</li>
-										<li class="item-benefista__item">
-											<p>Робота з нами дозволить отримати і забудовника та виробника будматеріалів в одній особі
-											</p>
-										</li>
+							<div class="row-typesm__item item-typesm">
+								<div class="item-typesm__body">
+									<div class="item-typesm__image">
+										<a href="#"><img src="img/typesm/item02.jpg" alt=""></a>
+										<div class="item-typesm__textblock textblock-typesm">
+											<div class="textblock-typesm__body">
+												<div class="textblock-typesm__text">
+													<h3><a href="#">Багатоповерхові панельні будинки</a></h3>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="row-typesm__item item-typesm">
+								<div class="item-typesm__body">
+									<ul class="item-typesm__list">
+										<li class="item-typesm__item item1">Тяжкий крупнозернистий бетон не нижче В15 відповідно до
+											вказівок робочих креслень</li>
+										<li class="item-typesm__item item2">Морозостійкість бетону - марка F300</li>
+										<li class="item-typesm__item item3">Водопроникність – марка W8</li>
 									</ul>
-									<div class="item-benefista__back"><img src="img/benefitsa/y-back.png" alt="back"></div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
