--- a/portfolio/B19/production.html
+++ b/portfolio/B19/production.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220609190614">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220611092503">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -50,12 +50,12 @@
 							<div class="header__menu menu">
 								<nav class="menu__body">
 									<div class="menu__home">
-										<a class="active" href="index.html"><img src="img/header/home-icon.svg" alt="Home"></a>
+										<a class="homelink" href="index.html"><img src="img/header/home-icon.svg" alt="Home"></a>
 									</div>
 									<button type="button" class="search__exit"><span class="menu-icon"></span></button>
 									<input autocomplete="off" type="text" name="form[]" data-error="Ошибка" placeholder="Введите поисковый запрос" class="menu__input hide">
 									<ul class="menu__list">
-										<li class="menu__item"><a href="about.html" class="menu__link">Про нас</a>
+										<li class="menu__item"><a href="about.html" id="about.html" class="menu__link">Про нас</a>
 										</li>
 										<li class="menu__item"><a href="production.html" class="menu__link">Виробництво</a>
 											<div class="menu__arrow"></div>
@@ -68,13 +68,13 @@
 										<li class="menu__item"><a href="new.html" class="menu__link">Новини</a></li>
 										<li class="menu__item"><a href="eco.html" class="menu__link">Екологія</a></li>
 										<li class="menu__item"><a href="#" class="menu__link">Експериментальний майданчик</a></li>
-										<li class="menu__item"><a href="#" class="menu__link">Модульні проєкти</a>
+										<li class="menu__item"><a href="modules.html" class="menu__link">Модульні проєкти</a>
 											<div class="menu__arrow"></div>
 											<ul class="menu__sublist">
-												<li class="menu__subitem"><a href="#" class="menu__sublink">111111
-														MODO</a></li>
-												<li class="menu__subitem"><a href="#" class="menu__sublink">Б222222ьні
-														будинки</a></li>
+												<li class="menu__subitem"><a href="modo.html" class="menu__sublink">Збірні модульні
+														будинки MODO</a></li>
+												<li class="menu__subitem"><a href="builds.html" class="menu__sublink">Багатоповерхові
+														панельні будинки</a></li>
 											</ul>
 										</li>
 										<li class="menu__item"><a href="#" class="menu__link">Контакти</a></li>
@@ -114,12 +114,14 @@
 											<li class="mobilemenu__item"><a href="eco.html" class="mobilemenu__link">Екологія</a></li>
 											<li class="mobilemenu__item"><a href="#" class="mobilemenu__link">Експериментальний
 													майданчик</a></li>
-											<li class="mobilemenu__item"><a href="#" class="mobilemenu__link">Модульні проєкти</a>
+											<li class="mobilemenu__item"><a href="modules.html" class="mobilemenu__link">Модульні
+													проєкти</a>
 												<div class="menu__arrow"></div>
 												<ul class="mobilemenu__sublist">
-													<li class="mobilemenu__subitem"><a href="#" class="mobilemenu__link">Збірні модульні
-															будинки MODO </a></li>
-													<li class="mobilemenu__subitem"><a href="#" class="mobilemenu__link">Багатоповерхові
+													<li class="mobilemenu__subitem"><a href="modo.html" class="mobilemenu__link">Збірні
+															модульні
+															будинки MODO</a></li>
+													<li class="mobilemenu__subitem"><a href="builds.html" class="mobilemenu__link">Багатоповерхові
 															панельні будинки</a></li>
 												</ul>
 											</li>
@@ -171,52 +173,68 @@
 					<div class="productions__body">
 						<div class="productions__row row-productions">
 							<div class="row-productions__item item-productions">
-								<div class="item-productions__body">
-									<div class="item-productions__image"><img src="img/productions/item1.jpg" alt="item1">
-										<a class="item-productions__link" href="#">
-											<div class="item-productions__text">
-												<p>Виробництво бетону</p>
+								<a href="productionb.html">
+									<div class="item-productions__body">
+										<div class="item-productions__image">
+											<img src="img/productions/item1.jpg" alt="">
+											<div class="item-productions__textblock textblock-productions">
+												<div class="textblock-productions__body">
+													<div class="textblock-productions__text">
+														<h3>Виробництво панелей</h3>
+													</div>
+												</div>
 											</div>
-										</a>
+										</div>
 									</div>
-
-								</div>
+								</a>
 							</div>
 							<div class="row-productions__item item-productions">
-								<div class="item-productions__body">
-									<div class="item-productions__image"><img src="img/productions/item02.jpg" alt="item1">
-										<a class="item-productions__link" href="productionpan.html">
-											<div class="item-productions__text">
-												<p>Виробництво панелей</p>
+								<a href="productionpan.html">
+									<div class="item-productions__body">
+										<div class="item-productions__image">
+											<img src="img/productions/item02.jpg" alt="">
+											<div class="item-productions__textblock textblock-productions">
+												<div class="textblock-productions__body">
+													<div class="textblock-productions__text">
+														<h3>Виробництво панелей</h3>
+													</div>
+												</div>
 											</div>
-										</a>
+										</div>
 									</div>
-
-								</div>
+								</a>
 							</div>
 							<div class="row-productions__item item-productions">
-								<div class="item-productions__body">
-									<div class="item-productions__image"><img src="img/productions/item03.jpg" alt="item1">
-										<a class="item-productions__link" href="#">
-											<div class="item-productions__text">
-												<p>Залізобетонні конструкції</p>
+								<a href="#">
+									<div class="item-productions__body">
+										<div class="item-productions__image">
+											<img src="img/productions/item03.jpg" alt="">
+											<div class="item-productions__textblock textblock-productions">
+												<div class="textblock-productions__body">
+													<div class="textblock-productions__text">
+														<h3>Залізобетонні конструкції</h3>
+													</div>
+												</div>
 											</div>
-										</a>
+										</div>
 									</div>
-
-								</div>
+								</a>
 							</div>
 							<div class="row-productions__item item-productions">
-								<div class="item-productions__body">
-									<div class="item-productions__image"><img src="img/productions/item04.jpg" alt="item1">
-										<a class="item-productions__link" href="#">
-											<div class="item-productions__text">
-												<p>Виробництво меблів</p>
+								<a href="#">
+									<div class="item-productions__body">
+										<div class="item-productions__image">
+											<img src="img/productions/item04.jpg" alt="">
+											<div class="item-productions__textblock textblock-productions">
+												<div class="textblock-productions__body">
+													<div class="textblock-productions__text">
+														<h3>Виробництво меблів</h3>
+													</div>
+												</div>
 											</div>
-										</a>
+										</div>
 									</div>
-
-								</div>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -283,7 +301,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20220609190614"></script>
+	<script src="js/app.min.js?_v=20220611092503"></script>
 </body>
 
 </html>
